--- a/src/LoaderComponent/loader.css
+++ b/src/LoaderComponent/loader.css
@@ -71,13 +71,13 @@
     box-sizing: border-box;
   }
   
-  body {
+  /* body {
     min-height: 100vh;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: flex-start;
-  }
+  } */
   
   .spinner-box {
     width: 300px;
